User-visible changes in version 0.9.7  (2011-  -  ):
* fix: UDFs (user-defined functions) did not work properly in ver. 0.9.5-6
* data operations: added aggregate functions argmin, argmax and count

User-visible changes in version 0.9.6  (2011-01-26):
* fixed three bugs, one of them was sometimes crashing the program at startup

User-visible changes in version 0.9.5  (2011-01-24):
* libfityk: the parser has been completely rewritten and the syntax was
  slightly changed:
  - major changes in the `info' command; two new commands, `print' and `debug', 
    partially took over some functionality of the old `info'
  - "commands" replaced by "set"/"exec"
  - "dump" replaced by "info state"
  - values of the fitting_method setting changed to lower case
  - "set @0.title = ..." replaced with "@0: title = ..."
  - settings: removed formula_export_style, guess_at_center_pm and
    can_cancel_guess, changed autoplot and verbosity,
    added logfile, log_full, fit_replot,
    info_numeric_format renamed to numeric_format, data_default_sigma to
    default_sigma, cut_function_level to function_cutoff,
    variable_domain_percent to domain_percent
  - in "define ... where param=expr" expr is substituted in brackets now
  - added syntax: delete file 'filename'
  - "guess": changed argument order
  - F.param = $variable   ->   F[*].param = $variable
  See the wiki for details (there is a tool that upgrades fityk scripts).
* new website address (fityk.nieto.pl) and new code repository (GitHub)
* GUI: simplified two dialogs: Edit Script and Definition Manager
* error in script stops the script

User-visible changes in version 0.9.4  (2010-10-09):
* removed syntax `delete[range]', use `delete(condition)' instead
* syntax `y[x=15]' replaced with `y[index(15)]'
* removed data range syntax, e.g. X[3...10]=15. It can be replaced
  with X = n >= 3 and n < 10 ? 15 : x
* removed syntax "order="
* removed syntax "commands < file[m:n]", only the whole file can be executed