@@ -1,0 +1,9 @@
+// This file is part of fityk program. Copyright (C) Marcin Wojdyr
+// Licence: GNU General Public License ver. 2+
+
+#ifndef FITYK_WX_EXPORTD_H_
+#define FITYK_WX_EXPORTD_H_
+
+bool export_data_dlg(wxWindow *parent);
+
+#endif
